Cambio General a la Página, reorganizacion y nueva Navbar
Cambie lo que ya había antes, falta poner los elementos de la pagina y organizarlos pero la navbar esta casi completamente hecha

--- a/WebSite/Inicio/index.html
+++ b/WebSite/Inicio/index.html
@@ -9,21 +9,63 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shippori+Antique&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
         <div class="navbar">
-            <img src="../Images/brand-logo.png" alt="brand-logo">
-            <h1 class="brand-font">Smart Security</h1>
-            <img src="../Images/user-icon.png" alt="user-logo">
+            <img src="../Images/Logo (5).png" alt="brand-logo">
+                <div class="navbar__pagina-principal">
+                        <img src="../Images/SimboloHomePage.png" alt="SimboloHomePage">
+                        <a href="#">Página Principal</a>
+                </div>
+
+                <div class="navbar__info">
+                    <img src="../Images/IconoDeInformacion.png" alt="IconoDeInformacion">
+                    <a href="#">Información</a>
+                </div>
+
+                <div class="navbar__historial">
+                    <img src="../Images/IconoDeHistorial.png" alt="">
+                    <a href="#">Historial</a>
+                </div>
+
+                <div class="navbar__camara">
+                    <img src="../Images/SimboloCamara.png" alt="">
+                    <a href="#">Cámara</a>
+                </div>
+        </div>            
+        <div class="login-btns-wrapper">
+            <a href="#">Registrarse</a>
+            <a href="#" class="login-btn">Iniciar Session</a>
+    </header>
+        <div class="descriptive image"> 
+            <img src="../Images/desctiptive-image.png" alt="desctiptive-image">
         </div>
-        <div class="navbar navbar1">
+        <div class="basic-info">
             <ul>
-                <li><a href="#">Info</a></li>
-                <li><a href="#">Historial</a></li>
-                <li><a href="#">Camara</a></li>
+                <titulo><span> Conexiones Seguras,<br></span> <span>vidas tranquilas. </span><br></titulo>
+                <subtitulo><span> El mejor sistema de control de accesos inteligente. </span><br></subtitulo>
+                <img src="../Images/Imagen-cerrojo.png" alt="Imagen-cerrojo" class="fotito">
+                <texto><br><span> En Smart Secutity nos preocupamos por tu seguridad. Nuestra prioridad ante todo es protegerte tanto a vos como a tus pertenencias. </span><br></texto>
+                <texto><span> Dejá que nos encarguemos de todo asi podes despreocuparte y estar tranquilo de estar seguro. </span><br></texto>
             </ul>
         </div>
-    </header>
+        <div class="specific-info">
+            <container>
+                <ul>
+                    <titulo><span> ¿Qué es Smart Security?</span> <br></titulo>
+                    <texto1><span> Smart Security es un un sistema de control de accesos para una casa mediante tarjetas, huella digital, código y llave. 
+                       Contiene una cámara para poder ver quien está en la puerta, ademas de una base de datos en la cual se almacena un registro del momento en el qué se abre la puerta. También tiene un sistema qué envia un mail cada vez qué se intenta forzar la cerradura. 
+                    </span><br></texto1>
+                </ul>
+                <imagen> <img src="../Images/Simbolos-de-funciones-de-Smart-Security.png" alt="Simbolos-de-funciones-de-Smart-Security"></imagen>
+            </container>
+            </ul>
+        </div>
 </body>
 </html>
