Base de daton y login

--- a/WebSite/Login-Page/index.html
+++ b/WebSite/Login-Page/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Shippori+Antique&display=swap" rel="stylesheet">
 </head>
 <body>
-    <form action="../Images/brand-logo.png" class="login-form">
+    <form class="login-form" id="loginForm">
         <img src="../Images/brand-logo.png" class="login-form__image">
         <h2 class="login-form__h2 brand-font">Inicie Sesion en Smart Scurity</h2>
         <p class="login-form__p brand-font">Ingrese su correo electronico y contraseña</p>
@@ -29,5 +29,7 @@
             <input type="submit" value="Siguiente" class="login-form__button login-form__button--submit">
         </div>
     </form>
+
+    <script src="./script.js"></script>
 </body>
 </html>
