Acomodo login-page, cambios en Historial (menu de opciones finalizado)
Falta conectar con la base de datos y averiguar como hacer para crear nuevos registros con la información que llega de la base de datos

--- a/WebSite/Inicio/index.html
+++ b/WebSite/Inicio/index.html
@@ -25,11 +25,11 @@
             </div>
                 
             <div class="navbar__info">
-                <a href="#"><img src="../Images/IconoDeInformacion.png" alt="IconoDeInformacion"><br>Información</a>
+                <a href="#caracteristicas"><img src="../Images/IconoDeInformacion.png" alt="IconoDeInformacion"><br>Información</a>
             </div>
 
             <div class="navbar__historial">
-                <a href="#"><img src="../Images/IconoDeHistorial.png" alt=""><br>Historial</a>
+                <a href="../Historial/"><img src="../Images/IconoDeHistorial.png" alt=""><br>Historial</a>
             </div>
 
             <div class="navbar__camara">
@@ -37,8 +37,8 @@
             </div>
         </div>            
         <div class="login-btns-wrapper">
-            <a href="#">Registrarse</a>
-            <a href="#" class="login-btn">Iniciar Sesión</a>
+            <a href="../Login-Page/" class="register-btn">Registrarse</a>
+            <a href="../Login-Page/" class="login-btn">Iniciar Sesión</a>
     </header>
 
         <div class="descriptive-image"> 
@@ -80,7 +80,7 @@
             </div>
         </div>
 
-        <div class="caracteristicas">
+        <div class="caracteristicas" id="caracteristicas">
             <div class="caracteristicas__titulo"><span class="titulo">Características</span></div>
             <div class="caracteristicas__imagenes">
                 <div class="caracteristicas__imagenes__huella-digital"><img src="../Images/Vector 42.svg" alt="huella digital">
