Mejoras en Historial, funcionamiento de botones

--- a/WebSite/Inicio/index.html
+++ b/WebSite/Inicio/index.html
@@ -25,7 +25,7 @@
             </div>
                 
             <div class="navbar__info">
-                <a href="#caracteristicas"><img src="../Images/IconoDeInformacion.png" alt="IconoDeInformacion"><br>Información</a>
+                <a href="../Inicio/#caracteristicas"><img src="../Images/IconoDeInformacion.png" alt="IconoDeInformacion"><br>Información</a>
             </div>
 
             <div class="navbar__historial">
@@ -33,11 +33,11 @@
             </div>
 
             <div class="navbar__camara">
-                <a href="#"><img src="../Images/SimboloCamara.png" alt=""><br>Cámara</a>
+                <a href="../Camara/"><img src="../Images/SimboloCamara.png" alt=""><br>Cámara</a>
             </div>
         </div>            
         <div class="login-btns-wrapper">
-            <a href="../Login-Page/" class="register-btn">Registrarse</a>
+            <a href="../Register-Page/" class="register-btn">Registrarse</a>
             <a href="../Login-Page/" class="login-btn">Iniciar Sesión</a>
     </header>
 
@@ -50,7 +50,7 @@
                 <span class="titulo">Conexiones seguras, vidas tranquilas.</span>
                 <div class="basic-info__informacion__subtitulo"><span class="subtitulo">El mejor sistema de control de accesos inteligente.</span></div>
                 <span class="texto">En Smart Secutity nos preocupamos por tu seguridad. Nuestra prioridad ante todo es protegerte tanto a vos como a tus pertenencias.</span>
-                <button onclick=""  class="subtitulo">Empezar</button>
+                <a href="../Login-Page/"><button onclick="" class="subtitulo">Empezar</button></a>
             </div>
             <img src="../Images/Imagen-cerrojo.png" alt="Imagen-cerrojo" class="fotito">
 
@@ -178,10 +178,10 @@
         <img src="../Images/Logo con letras 1.png" alt="Logo con letras 1">
     </div>
     <div class="footer__links">
-        <span class="footer__links__home-page">Página Principal</span>
-        <span class="footer__links__informacion">Información</span>
-        <span class="footer__links__historial">Historial</span>
-        <span class="footer__links__camara">Cámara</span>
+        <a href="../Inicio/"><span class="footer__links__home-page">Página Principal</span></a>
+        <a href="../Inicio/#caracteristicas"><span class="footer__links__informacion">Información</span></a>
+        <a href="../Historial/"><span class="footer__links__historial">Historial</span></a>
+        <a href="../Camara"><span class="footer__links__camara">Cámara</span></a>
     </div>
     <div class="footer__contactos">
         <span class="footer__contactos__texto">Contáctanos</span>
