Empezando con la recepcion y envio de datos a la página web

--- a/WebSite/Historial/index.html
+++ b/WebSite/Historial/index.html
@@ -40,8 +40,8 @@
                 <a href="#"><img src="../Images/SimboloCamara.png" alt=""><br>Cámara</a>
             </div>
         </div>    
-        <div class="perfil">
-
+        <div class="perfil" >
+            <span class="perfil__letra">A</span>
         </div>        
     </header>
 
@@ -166,7 +166,6 @@
                 <!-- </div> -->
             </div>
 
-            <!-- Necesito hacer un select de la base de datos que seleccione la hora, la info (quien entró/intentó entrar) y el clip de ese momento -->
 
         </div>
     </div>
