--- a/WebSite/Historial/index.html
+++ b/WebSite/Historial/index.html
@@ -40,12 +40,20 @@
                 <a href="#"><img src="../Images/SimboloCamara.png" alt=""><br>Cámara</a>
             </div>
         </div>    
-        <div class="perfil" >
+        <div class="perfil" id="foto-de-perfil">
             <span class="perfil__letra">A</span>
         </div>        
     </header>
 
     <div class="pagina">
+        <div class="opciones__perfil" id="opciones__perfil">
+            <div class="opciones__cerrar-sesion">
+                <span class="opciones__cerrar-sesion-texto">Cerrar Sesión</span>
+            </div>
+            <div class="opciones__eliminar-cuenta" id="opciones__eliminar-cuenta">
+                <span class="opciones__eliminar-cuenta-texto">Eliminar Cuenta</span>
+            </div>
+        </div>
 
         <div class="historial" id="historial">
             <!-- <div class="historial__registro invisible" id="roncocapo">
@@ -170,7 +178,7 @@
         </div>
     </div>
 
-   <script src="./script.js" >
+   <script type="module" src="./script.js" >
    </script>
    
     <footer class="footer">
