--- a/WebSite/Login-Page/index.html
+++ b/WebSite/Login-Page/index.html
@@ -20,7 +20,8 @@
         <img src="../Images/brand-logo.png" class="login-form__image">
         <h2 class="login-form__h2 brand-font">Inicie Sesion en Smart Scurity</h2>
         <p class="login-form__p brand-font">Ingrese su correo electronico y contraseña</p>
-        
+        <div class="mensaje-de-error" id="mensaje-de-error"></div>
+
         <div class="login-form__text-container">
             <input type="text" placeholder="Correo Electronico" class="login-form__text-input">
             <input type="password" placeholder="Contraseña" class="login-form__text-input">
