Mejora de código y optimizacion general

--- a/WebSite/Camara/index.html
+++ b/WebSite/Camara/index.html
@@ -21,7 +21,7 @@
         <img src="../Images/Logo (5).png" alt="brand-logo">
 
         <div class="navbar__home-page">
-            <a href="#"><img src="../Images/SimboloHomePage.png" alt="SimboloHomePage"><br>Página Principal</a>
+            <a href="../Inicio/"><img src="../Images/SimboloHomePage.png" alt="SimboloHomePage"><br>Página Principal</a>
         </div>
             
         <div class="navbar__info">
@@ -33,12 +33,12 @@
         </div>
 
         <div class="navbar__camara">
-            <a href="#"><img src="../Images/SimboloCamara.png" alt=""><br>Cámara</a>
+            <a href="../Camara/"><img src="../Images/SimboloCamara.png" alt=""><br>Cámara</a>
         </div>
     </div>            
-    <div class="perfil">
-
-    </div>
+    <div class="perfil" id="foto-de-perfil">
+        <span class="perfil__letra">X</span>
+    </div>    
 </header>
 
 <body>
@@ -46,7 +46,8 @@
 
     </div>
 
-
+    <script type="module" src="./script.js" >
+    </script>
 </body>
 <footer class="footer">
     <div class="footer__image">
