--- a/WebSite/Inicio/index.html
+++ b/WebSite/Inicio/index.html
@@ -29,11 +29,11 @@
                 <a href="../Inicio/#caracteristicas"><img src="../Images/IconoDeInformacion.png" alt="IconoDeInformacion"><br>Información</a>
             </div>
 
-            <div class="navbar__historial">
+            <div class="navbar__historial" id="navbar__historial">
                 <a href="../Historial/"><img src="../Images/IconoDeHistorial.png" alt=""><br>Historial</a>
             </div>
 
-            <div class="navbar__camara">
+            <div class="navbar__camara" id="navbar__camara">
                 <a href="../Camara/"><img src="../Images/SimboloCamara.png" alt=""><br>Cámara</a>
             </div>
         </div>            
@@ -45,7 +45,7 @@
     </header>
         <div class="pre-body">
             <div class="opciones__perfil" id="opciones__perfil">
-                <div class="opciones__cerrar-sesion">
+                <div class="opciones__cerrar-sesion" id="opciones__cerrar-sesion">
                     <span class="opciones__cerrar-sesion-texto">Cerrar Sesión</span>
                 </div>
                 <div class="opciones__eliminar-cuenta" id="opciones__eliminar-cuenta">
@@ -82,7 +82,7 @@
                 <div class="solucion__titulo-y-texto">
                     <span class="titulo">Tranquilidad</span>
                     <div class="solucion__texto__parte1"><span class="texto">En Smart Security, el cliente se convierte en nuestra prioridad para garantizar una experiencia única y personalizada. Nuestro proyecto viene a resolver el gran problema que preocupa a la mayoría en la actualidad, la inseguridad.</span></div>
-                    <div class="solucion__texto__parte1__1"><span class="texto">Contamos con un sistema que utiliza camaras, huellas digitales, código numérico y el convencional cerrojo con llave. </span></div>
+                    <div class="solucion__texto__parte1__1"><span class="texto">Contamos con un sistema que utiliza camaras, huellas digitales, código numérico, sensores de tarjetas y el convencional cerrojo con llave. </span></div>
                 </div>
                 <div class="solucion__imagen"><img src="../Images/Imagen Solucion.png" alt=""></div>
                 <div class="solucion__texto-2">
@@ -104,7 +104,7 @@
                     <span class="subtitulo">Teclado numérico con seguro PIN</span></div>
 
                     <div class="caracteristicas__imagenes__camara"><img src="../Images/Vector 11.svg" alt="camarita">
-                    <span class="subtitulo">Cámara con Face ID y accesible en todo momento</span></div>
+                    <span class="subtitulo">Cámara accesible en todo momento</span></div>
                 </div>
 
                 <div class="caracteristicas__datos">
@@ -199,5 +199,5 @@
         <img class="footer__contactos__iconos" src="../Images/Iconos de contactos.png" alt="Iconos de contactos">
     </div>
 </footer>
-<script src="./script.js"></script>
+<script src="./script.js" type="module"></script>
 </html>
