--- a/WebSite/Historial/index.html
+++ b/WebSite/Historial/index.html
@@ -37,17 +37,17 @@
             </div>
 
             <div class="navbar__camara">
-                <a href="#"><img src="../Images/SimboloCamara.png" alt=""><br>Cámara</a>
+                <a href="../Camara/"><img src="../Images/SimboloCamara.png" alt=""><br>Cámara</a>
             </div>
         </div>    
         <div class="perfil" id="foto-de-perfil">
-            <span class="perfil__letra">A</span>
+            <span class="perfil__letra">X</span>
         </div>        
     </header>
 
     <div class="pagina">
         <div class="opciones__perfil" id="opciones__perfil">
-            <div class="opciones__cerrar-sesion">
+            <div class="opciones__cerrar-sesion" id="opciones__cerrar-sesion">
                 <span class="opciones__cerrar-sesion-texto">Cerrar Sesión</span>
             </div>
             <div class="opciones__eliminar-cuenta" id="opciones__eliminar-cuenta">
