--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       data-setup="{}"
     >
       <source src="http://localhost/Proyecto-2023-SmartSecurity/RTSP-HLS-SERVER/stream.m3u8" type="application/x-mpegURL" />
+
+      <!-- <source src="http://localhost/Proyecto-2023-SmartSecurity/CameraFiles/sexo.mp4"> -->
     </video>
   </body>
 </html>
