--- a/WebSite/Inicio/index.html
+++ b/WebSite/Inicio/index.html
@@ -177,7 +177,7 @@
                             <img class="informacion-personal__img" src="../Images/Chamin.jpeg" alt="Icono-Usuario">
                             <div class="informacion-personal__perfiles__texto">
                                 <div class="informacion-personal__perfiles__usuario"><span class="texto">Luca Chami</span></div>
-                                <div class="informacion-personal__perfiles__informacion"><span class="parrafo">Programador de la base de datos y del conversor del tipo de video de la camara de RTCP a HLS</span></div>
+                                <div class="informacion-personal__perfiles__informacion"><span class="parrafo">Programador de la base de datos y del conversor del tipo de video de la camara de RTSP a HLS</span></div>
                             </div>
                         </div>
 
